# sttapp

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pubspec.yaml  vite.config.js
.github/workflows/: ci.yml  deploy-cloudflare.yml  publish.yml
backend/: .env.example  IMPLEMENTATION_STATUS.md  Product_Plan.md  README.md  Setup_UI_Plan.md  Tasks.md  compose.yaml  deno.json  main.ts  package-lock.json  package.json  worker.ts  wrangler.jsonc
backend/migrations/: 0001_initial.down.sql  0001_initial.up.sql
backend/src/: app.ts  auth.ts  config.ts  crypto.ts  dependencies.ts  domain.ts  flac.ts  http.ts  observability.ts  pricing.ts  providers.ts  rate_limit.ts  repository.ts  webhooks.ts
backend/tests/: auth_app_test.ts  config_test.ts  helpers.ts  jobs_observability_test.ts  pricing_flac_test.ts  providers_webhooks_test.ts
installer/windows/: sttapp.iss
lib/: main.dart
lib/services/: config_repository.dart  desktop_auth_service.dart  (+9 more)
linux/: CMakeLists.txt  com.taresz.sttapp.desktop
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
static/: audio-processor.worklet.js
sttapp/: README.md  pubspec.yaml
test/: config_repository_test.dart  desktop_auth_service_test.dart  desktop_permission_service_test.dart  hosted_backend_client_test.dart  hotkey_service_test.dart  notification_service_test.dart  transcript_delivery_service_test.dart  transcription_coordinator_test.dart  transcription_service_test.dart  update_service_test.dart  widget_test.dart
(+42 files in other folders)
