[package]
name = "sttapp"
version = "1.0.0-alpha"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sttapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-stronghold = "2"
enigo = { version = "0.6.1", features = ['wayland', 'tokio', 'xdo'] }
tauri-plugin-store = "2.4.2"

# Linux only: access the underlying WebKitGTK view to grant permission requests
# (getUserMedia on Wayland requires programmatic allow() — the GTK dialog is suppressed)
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[profile.dev.package.scrypt]
opt-level = 3
